2006-01-13  Carl Worth  <cworth@cworth.org>

	* src/cairo-win32-font.c: (_flush_glyphs): Eliminate cast of
	state->dx.elements which has been wrong since the internals of
	cairo_array_t changed on 2005-12-21. Now, hopefully less than all
	text will be broken on win32.

2006-01-12  Carl Worth  <cworth@cworth.org>

	* test/multi-page.c: (draw_some_pages), (main): Add a call to
	cairo_copy_page, so that that gets called at least once within the
	test suite.

	* src/cairo-paginated-surface.c:
	(_cairo_paginated_surface_copy_page): Fix broken implementation of
	copy_page in the paginated surface by hiding it from the target
	surface which sees only show_page operations. (It's hard to do
	better than that unless we can guarantee thathe subsequent page
	won't trigger any image fallbacks.)
	
2006-01-12  Carl Worth  <cworth@cworth.org>

	* configure.in: Add a new CAIRO_HAS_MULTI_PAGE_SURFACES automake
	conditional.
	
	* test/.cvsignore:
	* test/Makefile.am:
	* test/pdf-clip.c:
	* test/pdf-surface.c:
	* test/ps-surface.c: Remove backend-specific tests (ps-surface,
	pdf-surface, and pdf-clip) that are now redundant with the ps and
	pdf support in the rest of the test suite.

	* test/multi-page.c: (draw), (draw_five_pages), (main): Add a new
	one-off test for testing show_page with both the ps and pdf
	backends.

2006-01-12  Carl Worth  <cworth@cworth.org>

	Some fixes for the fact that multi-page output was totally broken
	for cairo_ps_surface_t (at least):

	* src/cairo-ps-surface.c: (_cairo_ps_surface_emit_header),
	(_cairo_ps_surface_emit_footer),
	(_cairo_ps_surface_create_for_stream_internal),
	(_cairo_ps_surface_start_page), (_cairo_ps_surface_end_page),
	(_cairo_ps_surface_copy_page), (_cairo_ps_surface_show_page),
	(_cairo_ps_surface_composite), (_cairo_ps_surface_fill_rectangles),
	(_cairo_ps_surface_composite_trapezoids),
	(_cairo_ps_surface_old_show_glyphs), (_cairo_ps_surface_fill):
	Move the Y-axis-flipping to be on a per-page basis (as it was